# eoos-project-arm-arm926pxp-versatile.rev0

./: .gitignore  .gitmodules  CMakeLists.txt
app/: CMakeLists.txt
app/source/: Configuration.cpp  Program.cpp
codebase/: CMakeLists.txt
codebase/app/: CMakeLists.txt
codebase/app/memory/: memory.arm926ej-s.gcc.v7.3.x.ld
codebase/app/source/: Configuration.cpp  Program.cpp
codebase/eoos/: CMakeLists.txt
documents/wiki/: home.odt
eoos/: CMakeLists.txt
scripts/: build-eclipse-project.beta.sh  build.sh  delete-submodule.sh  functions.sh  get-environment.alpha.sh  run-gdb.sh  run-on-qemu.sh  run-qemu.sh
tools/: toolchain-arm926ej-s.cmake
